Fix to icons align (footer block)

--- a/frontend/source/stylus/app.styl
+++ b/frontend/source/stylus/app.styl
@@ -26,6 +26,9 @@
     width 850px
   .logo
     width 200px
+  i.icon
+    display inline-block
+    vertical-align top
 
 .game-board .segment
   min-height 500px
